app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

html, body {
  height: 100%;
}

html {
  box-sizing: border-box;
}

*, *::before, *::after {
  box-sizing: inherit;
}

* {
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  flex-direction: column;
}

.hidden {
  display: none;
}

.hidden-accessible {
  left: -9999px;
  position: absolute;
  top: -9999px;
}

body {
  font-family: Helvetica, sans-serif;
  font-size: 1.1rem;
}

a {
  text-decoration: none;
  padding: 8px;
}

a:active, a:hover {
  text-decoration: underline;
}

/* FLASH NOTICES/ALERTS */

#flash-messages {
  margin: 0 auto;
  max-width: 300px;
  text-align: center;
}

/* HEADER */

body > header {
  align-items: center;
  display: flex;
  flex-direction: column;
  margin-bottom: 10px;
}

#logo-container {
  max-width: 150px;
  padding: 15px;
}

#logo {
  width: 100%;
}

body > section:nth-of-type(2) {
  flex-grow: 1;
}

#events-section header,
#new-event-section header,
#new-session-section header,
#new-registration-section header,
#edit-event-section header {
  padding-left: 10px;
}

#new-event-section,
#new-session-section,
#new-registration-section,
#edit-event-section {
  margin: 0 auto;
  max-width: 515px;
}

#events-section {
  margin: 0 auto;
  max-width: 1700px;
}

/* FOOTER */

footer {
  margin-top: 10px;
  text-align: center;
}

